--- a/assets/style.css
+++ b/assets/style.css
@@ -270,17 +270,13 @@ h5 {
     justify-content: space-between;
 }
 
-.slogan {
-    margin-bottom: 40px;
-}
+/* .slogan {
+    margin-bottom: 20px!important;
+} */
 
 .sobre-texto,
 .slogan {
     width: 460px;
-
-
-
-
 }
 
 .center-sobre {
@@ -327,13 +323,13 @@ h5 {
 }
 
 .coluna-grega {
-    display: flex;
-    flex-direction: column;
+    display: none !important;
+    /* flex-direction: column;
     justify-items: center;
     align-items: center;
     overflow: hidden;
     width: 220px;
-    height: 460px;
+    height: 460px; */
 }
 
 .cont-cards {
@@ -357,11 +353,11 @@ h5 {
     padding: 20px;
     transition: all .45s ease;
     width: 220px;
-    height: 120px;
+    height: 220px;
     align-items: center;
     text-align: center;
     justify-content: center;
-    gap: 10px;
+    gap: 15px;
     background: var(--main-color-gradient);
 }
 
@@ -372,14 +368,12 @@ h5 {
     width: 220px;
     height: 230px;
     /* transform: translateY(-30px); */
-
     align-items: start;
     text-align: center;
     justify-content: center;
     gap: 10px;
     background: var(--main-color-gradient);
 }
-
 .box-sobre:hover .items-desc {
     /* padding: 14px; */
     opacity: 1;
@@ -387,23 +381,19 @@ h5 {
     height: 200px;
     /* transform: translateY(-20px); */
 }
-
 .box-sobre:hover .items-titulo {
     font-size: 15px;
     transition: opacity 0.3s ease-in-out;
 }
-
 .box-sobre:hover .leia-mais {
     display: none;
 }
-
 .items-titulo {
     font-size: 15px;
     width: 125px;
     transition: opacity 0.3s ease;
     text-align: left;
 }
-
 .items-icons {
     font-size: 30px;
     color: white;
